# Juno

./: pyproject.toml
juno/: manage.py
juno/ai/: views.py
juno/ai/static/: aistyle.css
juno/ai/templates/ai/: index.html
juno/dailycount/: apps.py  forms.py  models.py  views.py
juno/dailycount/migrations/: 0001_initial.py
juno/dailycount/static/: dailycountstyle.css
juno/dailycount/templates/dailycount/: index.html
juno/hue/: views.py
juno/hue/static/: huestyle.css
juno/hue/templates/hue/: index.html
juno/juno/: asgi.py  settings.py  urls.py  views.py  wsgi.py
juno/juno/static/: style.css
juno/templates/: base.html  footer.html
juno/templates/juno/: index.html
